@@ -1,5 +1,8 @@
 2009-04-08  Roland McGrath  <roland@redhat.com>
 
+	* dwfl_module_getsym.c: Don't adjust for bias again after
+	__libdwfl_relocate_value.
+
 	* relocate.c (__libdwfl_relocate_value): Don't adjust a value from
 	a non-SHF_ALLOC section.
 	(relocate_getsym): Test st_shndx for SHN_* values, not *SHNDX.
